--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="./index.html">Home</a>
+            <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="./projects.html">Projetos</a>
+        </nav>
+    </header>
+
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
@@ -27,6 +34,9 @@
         </section>
         <img class="imagem-capa" src="./assets/eu.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
     </main>
-    <footer></footer>
+
+    <footer class="rodape">
+        <p>Desenvolvido por Emanuel Teixeira 👌</p>
+    </footer>
 </body>
 </html>
