inserção de responsividade

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <p class="apresentacao__conteudo__texto">Desenvolvedor Front-end de Brasília-DF, se especializando em tecnologias web. Tenho 29 anos e sou bacharel em Administração pela Universidade de Brasília - UnB. Busco me especializar em desenvolvimento para migração de área profissional e fazer parte desse grande e excitante mercado!</p>
             <p class="apresentacao__conteudo__texto">Durante minha trajetória na universidade, fiz parte do movimento empresa júnior, passando por consultor de projetos, fazendo parte de projetos de plano de marketing, planejamento estratégico e viabilidade econômica-financeira. Ainda dentro da empreja júnior do curso de administração, fui analista de inovação, trabalhando na migração digital da escola de consultoria no qual buscamos universalizar o acesso aos nossos conteúdos e criar um produto que pudesse ser vendido para outras EJs e empresas de mercado que buscavam se aprofundar nos temas de consultoria. Hoje sou analista de inteligência comercial e trabalho com projetos voltados à motivação, ações de vendas e gestão do time de vendas, por meio de OKRs e indicadores chaves.</p>
         </section>
-        <img class="imagem-capa" src="./assets/eu.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
+        <img class="apresentacao__imagem" src="./assets/eu.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
     </main>
 
     <footer class="rodape">
