--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Emanuel Teixeira, desenvolvedor Front-end em formação. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/emanuelct/">
+                <a class="apresentacao__links__redes" href="https://www.linkedin.com/in/emanuelct/">
                     <img src="./assets/linkedin.png" alt="Logo LinkedIn">
                     LinkedIn
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/Emanuelmts">
+                <a class="apresentacao__links__redes" href="https://github.com/Emanuelmts">
                     <img src="./assets/github.png" alt="Logo Github">
                     Github
                 </a>
             </div>
         </section>
-        <img class="imagem-capa" src="./assets/eu.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
+        <img class="apresentacao__imagem" src="./assets/eu.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
     </main>
 
     <footer class="rodape">
