mudanca cor, espaçamento e texto

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             <h2 class="apresentacao__conteudo__titulo">Tecnologias</h2>
             <div class="apresentacao__conteudo__texto">
                 <ul class="apresentacao__conteudo__texto">
-                    <ol> <img src="./assets/html-5.png" alt="HTML 5 logo"> HTML 5</oll>
+                    <ol> <img src="./assets/html-5.png" alt="HTML 5 logo"> HTML 5</ol>
                     <ol> <img src="./assets/css-3.png" alt="CSS 3 logo"> CSS 3</ol>
                     <ol> <img src="./assets/js.png" alt="JS logo"> Javascript</ol>
                 </ul>
