--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Emanuel Teixeira, desenvolvedor Front-end em formação. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo">Emanuel <strong class="titulo-destaque">Teixeira</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou um desenvolvedor Front-end em formação. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__redes" href="https://www.linkedin.com/in/emanuelct/">
+                <a class="apresentacao__links__redes" href="https://www.linkedin.com/in/emanuelct/" target="_blank" rel="noopener noreferrer">
                     <img src="./assets/linkedin.png" alt="Logo LinkedIn">
                     LinkedIn
                 </a>
-                <a class="apresentacao__links__redes" href="https://github.com/Emanuelmts">
+                <a class="apresentacao__links__redes" href="https://github.com/Emanuelmts" target="_blank" rel="noopener noreferrer">
                     <img src="./assets/github.png" alt="Logo Github">
                     Github
                 </a>
