nova apresentacao__imagem

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/eu.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
+        <img class="apresentacao__imagem" src="./assets/eu2.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
     </main>
 
     <footer class="rodape">
