--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Emanuel <strong class="titulo-destaque">Teixeira</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou um desenvolvedor Front-end em formação. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou um desenvolvedor Front-end. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__redes" href="https://www.linkedin.com/in/emanuelct/" target="_blank" rel="noopener noreferrer">
