ajustes nos titulos

--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Projetos</h1>
-            <p class="apresentacao__conteudo__texto">Principais projetos e tecnologias</p>
+            <h1 class="apresentacao__conteudo__titulo">Meus Projetos</h1>
+            <!-- <p class="apresentacao__conteudo__texto">Principais projetos e tecnologias</p> -->
             <h2 class="apresentacao__conteudo__titulo">Projetos realizados</h1>
             <p class="apresentacao__conteudo__texto">
                 <ul class="apresentacao__conteudo__texto">
@@ -27,12 +27,12 @@
                     <li>Em breve...</li>
                 </ul>
             </p>
-            <h2 class="apresentacao__conteudo__titulo">Tecnologias</h2>
+            <h3 class="apresentacao__conteudo__titulo">Tecnologias</h3>
             <div class="apresentacao__conteudo__texto">
                 <ul class="apresentacao__conteudo__texto">
                     <ol> <img src="./assets/html-5.png" alt="HTML 5 logo"> HTML 5</ol>
                     <ol> <img src="./assets/css-3.png" alt="CSS 3 logo"> CSS 3</ol>
-                    <ol> <img src="./assets/js.png" alt="JS logo"> Javascript</ol>
+                    <ol> <img src="./assets/js.png" alt="JS logo"> JavaScript</ol>
                 </ul>
             </div>
         </section>
