Adicao de projetos na página e ajustes no design

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="./index.html">Home</a>
-            <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="./projects.html">Projetos</a>
+            <a class="cabecalho__menu__link" href="./index.html">&ltHome/&gt</Home></a>
+            <a class="cabecalho__menu__link" href="./about.html">&ltSobre mim/&gt</a>
+            <a class="cabecalho__menu__link" href="./projects.html">&ltProjetos/&gt</a>
         </nav>
     </header>
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Emanuel <strong class="titulo-destaque">Teixeira</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou um desenvolvedor Front-end. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo">&ltEmanuel <strong class="titulo-destaque">Teixeira</strong>/&gt</h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou um desenvolvedor Front-end.<br> Ajudo pequenos negócios e designers a colocarem em prática boas ideias.<br> Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__redes" href="https://www.linkedin.com/in/emanuelct/" target="_blank" rel="noopener noreferrer">
