--- a/about.html
+++ b/about.html
@@ -10,16 +10,16 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="./index.html">Home</a>
-            <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="./projects.html">Projetos</a>
+            <a class="cabecalho__menu__link" href="./index.html">&ltHome/&gt</Home></a>
+            <a class="cabecalho__menu__link" href="./about.html">&ltSobre mim/&gt</a>
+            <a class="cabecalho__menu__link" href="./projects.html">&ltProjetos/&gt</a>
         </nav>
     </header>
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">Desenvolvedor Front-end de Brasília-DF,especialista em desenvolvimento web. Tenho 29 anos e sou bacharel em Administração pela Universidade de Brasília - UnB. Me especializei em desenvolvimento e migrei de área profissional!</p>
+            <p class="apresentacao__conteudo__texto">Desenvolvedor Front-end de Brasília-DF, especialista em desenvolvimento web. Tenho 29 anos e sou bacharel em Administração pela Universidade de Brasília - UnB. Me especializei em desenvolvimento e migrei de área profissional!</p>
             <p class="apresentacao__conteudo__texto">Durante minha trajetória na universidade, fiz parte do movimento empresa júnior, passando por consultor de projetos, fazendo parte de projetos de plano de marketing, planejamento estratégico e viabilidade econômica-financeira. Ainda dentro da empresa júnior do curso de administração, fui analista de inovação, trabalhando na migração digital da escola de consultoria no qual buscamos universalizar o acesso aos nossos conteúdos e criar um produto que pudesse ser vendido para outras EJs e empresas de mercado que buscavam se aprofundar nos temas de consultoria. Hoje sou analista de inteligência comercial e trabalho com projetos voltados à motivação, ações de vendas e gestão do time de vendas, por meio de OKRs e indicadores chaves.</p>
         </section>
         <img class="apresentacao__imagem" src="./assets/eu2.png" alt="Foto do Emanuel Teixeira de braços cruzados e sorrindo">
