incluído projeto relógio

--- a/projects.html
+++ b/projects.html
@@ -38,10 +38,10 @@
                         <div class="apresentacao__lista__projeto">
                             <h3>Relógio Digital</h3>
                             <p>Relógio digital desenvolvido em HTML, CSS e JS básico.</p>
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="apresentacao__lista__link">
+                            <a href="https://relogio-digital-phi-three.vercel.app/" target="_blank" rel="noopener noreferrer" class="apresentacao__lista__link">
                                 <p class="link-out">Play <img src="./assets/play.png" alt="Logo Github"></p>
                             </a>
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="apresentacao__lista__link">
+                            <a href="https://github.com/Emanuelmts/relogio-digital" target="_blank" rel="noopener noreferrer" class="apresentacao__lista__link">
                                 <p class="link-out">Github <img src="./assets/github.png" alt="Logo Github"></p>
                             </a>
                         </div>
